fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   color: white;
   display: inline-block;
   float: right;
-  margin: 0 0 20px 10px;
+  margin: 5px 0 20px 10px;
   padding: 8px 16px;
   text-decoration: none;
 }
